Opg 3 hjemmesiden progr.html

--- a/28022024 progr.html
+++ b/28022024 progr.html
@@ -25,13 +25,15 @@
                 Zealand, Sjællands Erhvervsakademi, Roskilde</strong>
             </div>
         </div>
-
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-12 text-left">
                 <p><strong>(Work):</strong><br />
-                Maglegårdsvej 2, 4000 Roskilde<br />
-                E-mail (work) anbo(at)zealand.dk</p>
+                    Maglegårdsvej 2, 4000 Roskilde<br />
+                    E-mail (work) anbo(at)zealand.dk</p>
             </div>
+        </div>
+
+        <div class="row">            
             <div class="col-md-4">
                 <p><strong>Teaching autumn 2019</strong><br>
                 <a href="https://docs.google.com/document/d/e/2PACX-1vQnP5GDXd2YmuUapbnNgaUAK-4gsDtZGDl-qZT-g3xsUCSvPhfr1OTdo7esf_b3qm3ypfQSwMuz5Mab/pub">Programmering 3sem</a> Datamatiker <br />
@@ -46,6 +48,19 @@
                 <a href="internship/index.html">Internship</a>, 5th semester, Comp Science<br>
                 <a href="dissertation2019spring/">Dissertation course</a><br>
                 Dissertations, Computer Science</p>
+            </div>
+            <div class="col-md-4">
+                <p><strong>Teaching autumn 2018</strong><br>
+                <a href="mobile2019spring/index.html"> Programming, 3rd semester, Comp Science</a>, 4th semester Comp Science<br>
+                <a href="internship/index.html">Internship</a>, 5th semester, Comp Science<br>
+                <a href="dissertation2019spring/">Dissertation course</a><br>
+                Dissertations, Computer Science</p>
+            </div>
+            
+        </div>
+        <div class="row">
+            <div class="col-12 text-right">
+            <a href="undervisning/">Previous semesters</a>
             </div>
         </div>
 
